Bug 498538 - When changing the Night light temperature while night mode is active, the screen goes back & forth between the current setting and the new one
Summary: When changing the Night light temperature while night mode is active, the scr...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Brightness and Color widget (other bugs)
Version First Reported In: 6.2.5
Platform: Manjaro Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-11 20:02 UTC by whatifgodwasoneofus
Modified: 2025-01-28 15:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video showing how the colour temperature sways when moving the temperature slider (3.53 MB, video/mp4)
2025-01-18 20:15 UTC, whatifgodwasoneofus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description whatifgodwasoneofus 2025-01-11 20:02:22 UTC
SUMMARY
When changing the Night light temperature from the "Brightness & Color" widget in Plasma, a "preview" of how the new colours look like is done while moving the "Night light temperature" cursor. However, if this is done while the Night light mode is active, the colours are immediately reverted back to the current setting, resulting in unpleasant effects.

STEPS TO REPRODUCE
1. Activate Night mode (change the activation time settings if needed, so that you're sure the Night mode is active)
2. Go to the "Brightness & Color" widget
3. Move the "Night light temperature" cursor

OBSERVED RESULT
The screen colours change according to the new setting, but are immediately reverted back to the _current_ settings.
While you keep moving the slider, the screen goes back & forth between the _current_ setting and the new one.
NOTE: You can move the cursor either by sliding it with the mouse or by using the arrow keys.

EXPECTED RESULT
The screen colours should change according to the new setting and *stay like that* - at least until the mouse button is released!

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Linux 6.12.9 / Plasma 6.2.5 on Wayland
KDE Plasma Version: 6.2.5
KDE Frameworks Version:  6.9.0
Qt Version: using 6.8.1 built against 6.8.1

ADDITIONAL INFORMATION
I haven NOT tried on X11.
Comment 1 Nate Graham 2025-01-13 20:47:39 UTC
Could you attach a screen recording of this? To my knowledge, the Brightness & Color widget doesn't have a way to change the night light color temperature from directly inside it; you have to open System Settings for this.
Comment 2 whatifgodwasoneofus 2025-01-18 20:15:08 UTC
Created attachment 177515 [details]
Video showing how the colour temperature sways when moving the temperature slider

In this video you see how the colour temperature sways when the night mode is active.
The screen colours go back & forth between the current setting and the new settings.
This happens when moving the slider by using either the mouse or the keyboard arrows.

When the night mode is off ("suspended" in my case), the screen colours stay "stable" with the new setting, but only if the slider is moved with the mouse. If keyboard arrows keys are used, then the screen colours flicker again.
Comment 3 Thomas Moerschell 2025-01-27 20:59:29 UTC
Can confirm this happens for me as well on openSUSE Tumbleweed with KDE Plasma 6.2.91
Comment 4 Bug Janitor Service 2025-01-28 02:46:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7066
Comment 5 Thomas Moerschell 2025-01-28 15:06:04 UTC
Git commit 3aa0dd792938b3b568cb59dae0dc5f847498da5b by Thomas Moerschell.
Committed on 28/01/2025 at 12:06.
Pushed by vladz into branch 'master'.

plugins/nightlight: Prevent preview temperature reset

After reaching the target preview temperature, skip resetting the slow
update timers to avoid reverting the temperature to the normal value.

M  +6    -0    src/plugins/nightlight/nightlightmanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/3aa0dd792938b3b568cb59dae0dc5f847498da5b
Comment 6 Vlad Zahorodnii 2025-01-28 15:35:25 UTC
Git commit 26beeef8f173d4db54e87eaa07e279035bc8a789 by Vlad Zahorodnii, on behalf of Thomas Moerschell.
Committed on 28/01/2025 at 15:21.
Pushed by vladz into branch 'Plasma/6.3'.

plugins/nightlight: Prevent preview temperature reset

After reaching the target preview temperature, skip resetting the slow
update timers to avoid reverting the temperature to the normal value.
(cherry picked from commit 3aa0dd792938b3b568cb59dae0dc5f847498da5b)

M  +6    -0    src/plugins/nightlight/nightlightmanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/26beeef8f173d4db54e87eaa07e279035bc8a789