plugins/nightlight: Prevent preview temperature reset

After reaching the target preview temperature, skip resetting the slow
update timers to avoid reverting the temperature to the normal value.

BUG: 498538
(cherry picked from commit 3aa0dd792938b3b568cb59dae0dc5f847498da5b)